fix: Fix z-index issue of navbar

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,6 +2,7 @@
     position: sticky;
     top: 0;
     width: 100%;
+    z-index: 1000;
     /* background-color: rgba(0, 0, 0, 0.500); */
 
     -webkit-backdrop-filter: blur(6px);
